--- a/ne2.html
+++ b/ne2.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>git code uset</h1>
+  <h1>git code uset</h1> ;
+  <h2>react js</h2>
 </body>
 </html>
